add  animation recommen

--- a/sass/components/_header.scss
+++ b/sass/components/_header.scss
@@ -5,6 +5,19 @@
   padding-bottom: 96px;
   z-index: 3;
 
+  //animation
+  &__fixed {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    z-index: 4;
+
+    // background-color: $accent;
+    background-color: #047857d4;
+  }
+  //
+
   &__position {
     position: relative;
   }
