--- a/css/main.css
+++ b/css/main.css
@@ -366,6 +366,14 @@ body.menu-open {
   padding-bottom: 96px;
   z-index: 3;
 }
+.header__fixed {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  z-index: 4;
+  background-color: rgba(4, 120, 87, 0.831372549);
+}
 .header__position {
   position: relative;
 }
@@ -654,6 +662,9 @@ body.menu-open {
   margin-right: 104px;
   display: inline-block;
   z-index: 3;
+  opacity: 0;
+  transition: transform 500ms linear, opacity 500ms linear;
+  transform: translateX(-100%);
 }
 @media screen and (min-width: 768px) and (max-width: 1199px) {
   .hero-leftblock {
@@ -667,6 +678,11 @@ body.menu-open {
     margin-right: 0;
     padding-bottom: 0;
   }
+}
+.hero-leftblock__animation {
+  opacity: 1;
+  transition: transform 500ms linear, opacity 500ms linear;
+  transform: translateX(0);
 }
 .hero-leftblock__span {
   color: white;
@@ -791,6 +807,9 @@ body.menu-open {
   position: absolute;
   top: 0;
   left: 548px;
+  opacity: 0;
+  transition: transform 500ms linear, opacity 500ms linear;
+  transform: translateX(100%);
 }
 @media screen and (min-width: 1200px) {
   .hero-rightblock {
@@ -801,6 +820,11 @@ body.menu-open {
   .hero-rightblock {
     display: none;
   }
+}
+.hero-rightblock__animation {
+  opacity: 1;
+  transition: transform 500ms linear, opacity 500ms linear;
+  transform: translateX(0);
 }
 .hero-rightblock__img {
   width: 720px;
@@ -915,6 +939,16 @@ body.menu-open {
     align-items: center;
   }
 }
+.recommen__text {
+  opacity: 0;
+  transition: transform 500ms linear, opacity 500ms linear;
+  transform: translateX(-100%);
+}
+.recommen__text--animation {
+  opacity: 1;
+  transition: transform 500ms linear, opacity 500ms linear;
+  transform: translateX(0);
+}
 .recommen__title {
   font-style: normal;
   font-weight: 600;
@@ -922,12 +956,23 @@ body.menu-open {
   line-height: 1.25;
   text-transform: capitalize;
   color: #1b1c57;
+  opacity: 0;
+  transition: transform 500ms linear, opacity 500ms linear;
+  transform: translateX(-100%);
+}
+.recommen__title--animation {
+  opacity: 1;
+  transition: transform 500ms linear, opacity 500ms linear;
+  transform: translateX(0);
 }
 
 .recommen-list {
   display: flex;
   align-items: center;
   margin-right: 136px;
+  opacity: 0;
+  transition: transform 500ms linear, opacity 500ms linear;
+  transform: translateY(-100%);
 }
 @media screen and (min-width: 768px) and (max-width: 1199px) {
   .recommen-list {
@@ -941,6 +986,11 @@ body.menu-open {
     flex-direction: column;
     gap: 20px;
   }
+}
+.recommen-list__animation {
+  opacity: 1;
+  transition: transform 500ms linear, opacity 500ms linear;
+  transform: translateY(0);
 }
 .recommen-list__item:not(:last-child) {
   margin-right: 56px;
@@ -1017,6 +1067,9 @@ body.menu-open {
   display: flex;
   align-items: center;
   margin-left: auto;
+  opacity: 0;
+  transition: transform 500ms linear, opacity 500ms linear;
+  transform: translateX(100%);
 }
 @media screen and (min-width: 768px) and (max-width: 1199px) {
   .recommen-list-btn {
@@ -1027,6 +1080,11 @@ body.menu-open {
   .recommen-list-btn {
     margin-right: auto;
   }
+}
+.recommen-list-btn__animation {
+  opacity: 1;
+  transition: transform 500ms linear, opacity 500ms linear;
+  transform: translateX(0);
 }
 .recommen-list-btn__item:not(:last-child) {
   margin-right: 16px;
@@ -1089,6 +1147,38 @@ body.menu-open {
 }
 .recommen-card__item:hover, .recommen-card__item:focus {
   transform: scale(1.05);
+}
+.recommen-card__item:nth-child(1), .recommen-card__item:nth-child(2) {
+  opacity: 0;
+  transition: transform 500ms linear, opacity 500ms linear;
+  transform: translateX(-100%);
+}
+.recommen-card__item:nth-child(3), .recommen-card__item:nth-child(4) {
+  opacity: 0;
+  transition: transform 500ms linear, opacity 500ms linear;
+  transform: translateX(100%);
+}
+.recommen-card__item--animation:nth-child(1) {
+  opacity: 1;
+  transition: transform 500ms linear, opacity 500ms linear;
+  transform: translateX(0);
+}
+.recommen-card__item--animation:nth-child(2) {
+  opacity: 1;
+  transition: transform 500ms linear, opacity 500ms linear;
+  transform: translateX(0);
+  transition-delay: 0.2s;
+}
+.recommen-card__item--animation:nth-child(3) {
+  opacity: 1;
+  transition: transform 500ms linear, opacity 500ms linear;
+  transform: translateX(0);
+  transition-delay: 0.2s;
+}
+.recommen-card__item--animation:nth-child(4) {
+  opacity: 1;
+  transition: transform 500ms linear, opacity 500ms linear;
+  transform: translateX(0);
 }
 .recommen-card__img {
   width: 349px;
