--- a/sass/components/_hero.scss
+++ b/sass/components/_hero.scss
@@ -28,6 +28,21 @@
     margin-right: 0;
     padding-bottom: 0;
   }
+
+  //animation
+
+  opacity: 0;
+  transition: transform 500ms linear, opacity 500ms linear;
+  transform: translateX(-100%);
+
+  &__animation {
+    opacity: 1;
+    transition: transform 500ms linear, opacity 500ms linear;
+    transform: translateX(0);
+  }
+
+  //
+
   &__span {
     color: white;
     text-shadow: -1px -1px 0 #000, 1px -1px 0 #000, -1px 1px 0 #000, 1px 1px 0 #000;
@@ -177,6 +192,20 @@
   @include mobile {
     display: none;
   }
+
+  //animation
+
+  opacity: 0;
+  transition: transform 500ms linear, opacity 500ms linear;
+  transform: translateX(100%);
+
+  &__animation {
+    opacity: 1;
+    transition: transform 500ms linear, opacity 500ms linear;
+    transform: translateX(0);
+  }
+
+  //
 
   &__img {
     width: 720px;
