--- a/sass/components/_partnership.scss
+++ b/sass/components/_partnership.scss
@@ -28,6 +28,10 @@
   &__content {
     text-align: center;
     margin-bottom: 40px;
+
+    opacity: 0;
+    transition: transform 500ms linear, opacity 500ms linear;
+    transform: translateY(-100%);
   }
 
   &__flex {
@@ -100,6 +104,20 @@
     max-width: 400px;
     &:not(:last-child) {
       margin-bottom: 40px;
+    }
+
+    opacity: 0;
+    transition: transform 500ms linear, opacity 500ms linear;
+    transform: translateX(-100%);
+
+    &:nth-child(2) {
+      transition-delay: 0.2s;
+    }
+    &:nth-child(3) {
+      transition-delay: 0.4s;
+    }
+    &:nth-child(4) {
+      transition-delay: 0.6s;
     }
   }
 }
@@ -204,6 +222,10 @@
   width: 560px;
   height: 480px;
 
+  opacity: 0;
+  transition: transform 500ms linear, opacity 500ms linear;
+  transform: translateX(100%);
+
   @include mobile {
     width: 440px;
   }
@@ -278,4 +300,17 @@
   &__svg {
     margin-right: 12px;
   }
+}
+
+//animation
+
+.animation-top,
+.animation-left {
+  opacity: 1;
+  transition: transform 500ms linear, opacity 500ms linear;
+  transform: translateY(0);
+}
+
+.animation-left {
+  transform: translateX(0);
 }
