--- a/sass/components/_recommen.scss
+++ b/sass/components/_recommen.scss
@@ -27,6 +27,9 @@
   }
 
   &__text {
+    opacity: 0;
+    transition: transform 500ms linear, opacity 500ms linear;
+    transform: translateY(-100%);
   }
 
   &__title {
@@ -37,6 +40,10 @@
     text-transform: capitalize;
 
     color: $secondary-text;
+
+    opacity: 0;
+    transition: transform 500ms linear, opacity 500ms linear;
+    transform: translateX(-100%);
   }
 }
 
@@ -44,6 +51,10 @@
   display: flex;
   align-items: center;
   margin-right: 136px;
+
+  opacity: 0;
+  transition: transform 500ms linear, opacity 500ms linear;
+  transform: translateY(-100%);
 
   @include tablet {
     margin-right: 0;
@@ -139,6 +150,10 @@
   align-items: center;
   margin-left: auto;
 
+  opacity: 0;
+  transition: transform 500ms linear, opacity 500ms linear;
+  transform: translateX(100%);
+
   @include tablet {
     margin-right: auto;
   }
@@ -206,6 +221,20 @@
       @include desktop {
         margin-right: 40px;
       }
+    }
+
+    opacity: 0;
+    transition: transform 300ms linear, opacity 300ms linear;
+    transform: translateX(-100%);
+
+    &:nth-child(2) {
+      transition-delay: 0.2s;
+    }
+    &:nth-child(3) {
+      transition-delay: 0.4s;
+    }
+    &:nth-child(4) {
+      transition-delay: 0.6s;
     }
 
     @include tablet {
@@ -338,4 +367,17 @@
       color: $accent;
     }
   }
+}
+
+//animation
+
+.animation-top,
+.animation-left {
+  opacity: 1;
+  transition: transform 500ms linear, opacity 500ms linear;
+  transform: translateY(0);
+}
+
+.animation-left {
+  transform: translateX(0);
 }
