--- a/sass/components/_review.scss
+++ b/sass/components/_review.scss
@@ -14,6 +14,10 @@
     &::before {
       margin-bottom: 8px;
     }
+
+    opacity: 0;
+    transition: transform 500ms linear, opacity 500ms linear;
+    transform: translateY(-100%);
   }
 
   &__title {
@@ -30,6 +34,10 @@
     @include mobile {
       margin-bottom: 0;
     }
+
+    opacity: 0;
+    transition: transform 500ms linear, opacity 500ms linear;
+    transform: translateY(-100%);
   }
 
   &__span {
@@ -91,6 +99,20 @@
       @include mobile {
         margin-right: 0;
       }
+    }
+
+    opacity: 0;
+    transition: transform 500ms linear, opacity 500ms linear;
+    transform: translateX(-100%);
+
+    &:nth-child(2) {
+      transition-delay: 0.2s;
+    }
+    &:nth-child(3) {
+      transition-delay: 0.4s;
+    }
+    &:nth-child(4) {
+      transition-delay: 0.6s;
     }
   }
 
@@ -189,4 +211,17 @@
 
     color: #3c4563;
   }
+}
+
+//animation
+
+.animation-top,
+.animation-left {
+  opacity: 1;
+  transition: transform 500ms linear, opacity 500ms linear;
+  transform: translateY(0);
+}
+
+.animation-left {
+  transform: translateX(0);
 }
