--- a/sass/components/_subscribe.scss
+++ b/sass/components/_subscribe.scss
@@ -10,6 +10,9 @@
     align-items: center;
     position: relative;
     z-index: 1;
+
+    opacity: 0;
+    transition: opacity 500ms linear;
   }
 }
 
@@ -73,6 +76,9 @@
   padding-top: 65px;
   padding-bottom: 65px;
 
+  opacity: 0;
+  transition: transform 500ms linear, opacity 500ms linear;
+  transform: translateY(-100%);
   &__title {
     font-style: normal;
     font-weight: 600;
@@ -209,4 +215,22 @@
       }
     }
   }
+}
+
+//animation
+
+.animation-top {
+  transform: translateY(0);
+  opacity: 1;
+  transition: transform 500ms linear, opacity 500ms linear;
+}
+
+.animation-left {
+  opacity: 1;
+  transition: opacity 500ms linear;
+}
+
+.animation-opacity {
+  opacity: 1;
+  transition: opacity 500ms linear;
 }
